--- a/C/06_구조체와자료형.md
+++ b/C/06_구조체와자료형.md
@@ -288,3 +288,315 @@
 
 ## 23. 구조체와 사용자 정의 자료형2
 ### 23.1 구조체의 정의와 typedef 선언
+- 구조체 변수를 선언할 때에는 무조건 struct 선언을 추가해야 하는데 너무 귀찮다. 간단하게 표현하려면?
+#### 23.1.1 typedef의 선언
+- typedef 선언은 **기존에 존재하는 자료형의 이름에 새 이름을 부여하는 것** 을 목적으로 함  
+- `typedef int INT;`  // int의 또 다른 이름 INT를 부여. 자료형의 이름 int에 INT라는 이름을 추가로 붙여줌
+  + `INT num;`과 `int num;`은 동일한 선언
+  + `INT * ptr;`과 `int * ptr;`은 동일한 선언
+- typedef 선언에 있어서 새로운 이름의 부여는 가장 마지막에 등장하는 단어를 중심으로 이뤄진다.
+  + `typedef name1, name2, name3;` 에서 가장 마지막에 등장한 name3이 'name1, name2'에 부여된 새로운 이름이 됨
+  ```c
+    typedef int INT;
+    typedef int * PTR_INT;
+
+    typedef unsigned int UINT;
+    typedef unsigned int * PTR_UINT;
+
+    typedef unsigned char UCHAR;
+    typedef unsigned char * PTR_UCHAR;
+  ```
+  + 이처럼 복잡한 유형의 자료형 선언을 매우 간결히 처리할 수 있다.
+- **typedef로 정의되는 자료형의 이름은 대문자로 시작하는 것이 관례이다.**
+#### 23.1.2 구조체의 정의와 typedef 선언
+- struct 선언을 생략하는 방법
+  ```c
+    struct point {
+      int xpos;
+      int ypos;
+    };
+    struct point pos;
+  ```
+  위와 같이 선언해왔으나...
+  ```c
+    typedef struct point Point;     // struct point에 Point라는 이름을 부여!
+
+    Point pos;      // 이렇게 struct 선언과 구조체의 이름을 대상으로도 typedef 선언이 가능
+  ```
+- 모든 구조체의 이름을 대상으로 struct 선언의 생략을 위한 typedef 선언이 등장
+  ```c
+    struct point {
+      int xpos;
+      int ypos;
+    };
+    typedef struct point Point;
+  ```
+  위의 정의와 선언을 한데 묶으면 아래와 같이 표현 가능하다.
+  ```c
+    typedef struct point {
+      int xpos;
+      int ypos;
+    } Point;
+  ```
+- typedef 선언이 추가되었다고 해서 struct 선언을 통한 구조체 변수의 선언이 불가능한 것은 아니다!
+  ```c
+    Point pos1;           // typedef 선언을 이용한 변수의 선언!
+    struct point pos1;    // struct 선언을 추가한 형태의 변수선언!
+  ```
+#### 23.1.3 구조체의 이름 생략
+  ```c
+    typedef struct person {
+      char name[20];
+      char phoneNum[20];
+      int age;
+    } Person;
+  ```
+- 여기서 구조체의 이름 person은 사실상 별 의미가 없다. typedef에 의해 정의된 이름 Person을 사용하므로...
+  ```c
+    typedef struct {
+      char name[20];
+      char phoneNum[20];
+      int age;
+    } Person;
+  ```
+  + 위와 같이 구조체의 이름 생략 가능하다. 그러나 더 이상 struct를 통한 변수 선언은 불가능!
+    - `struct person man;` (X)
+### 23.2 함수로의 구조체 변수 전달과 반환
+#### 23.2.1 함수의 인자로 전달되고 return문에 의해 반환되는 구조체 변수
+- 함수를 호출했을 때 인자로 전달되는 변수의 값은 매개변수에 복사가 된다.
+- 마찬가지로 함수의 인자로 구조체 변수가 전달될 수 있으며, 구조체 변수가 매개변수의 선언으로 올 수 있다.
+- 전달되는 구조체 변수의 값은 매개변수에 통째로 복사가 된다.
+  ```c
+    #include <stdio.h>
+
+    typedef struct point {
+      int xpos;
+      int ypos;
+    } Point;
+
+    Point GetCurrentPosition(void) {
+      Point cen;
+      printf("Input current pos: ");
+      scanf("%d %d", &cen.xpos, &cen.ypos);
+      return cen;
+    }
+
+    void ShowPosition(Point pos) {
+      printf("[%d, %d] \n", pos.xpos, pos.ypos);
+    }
+
+    int main(void) {
+      Point curPos = GetCurrentPosition();
+      ShowPosition(curPos);
+      return 0;
+    }
+  ```
+- 만약 구조체의 멤버로 배열이 선언되어도 위 예제에서처럼 통째로 복사가 된다.
+- 예제) 구조체 변수를 대상으로 하는 Call-by-reference
+  ```c
+    #include <stdio.h>
+
+    typedef struct point {
+      int xpos;
+      int ypos;
+    } Point;
+
+    void OrgSymTrans(Point * ptr) {   // 원점대칭
+      ptr->xpos = (ptr->xpos) * -1;
+      ptr->ypos = (ptr->ypos) * -1;
+    }
+
+    void ShowPosition(Point pos) {
+      printf("[%d, %d] \n", pos.xpos, pos.ypos);
+    }
+
+    int main(void) {
+      Point pos = {7, -5};
+      OrgSymTrans(&pos);      // pos의 값을 원점 대칭이동시킨다.
+      ShowPosition(pos);
+      OrgSymTrans(&pos);      // pos의 값을 원점 대칭이동시킨다.
+      ShowPosition(pos);
+      return 0;
+    }
+    /* 수행결과
+      [-7, 5]
+      [7, -5]
+      Program ended with exit code: 0
+    */
+  ```
+- 이처럼 구조체의 포인터 변수도 매개변수로 선언이 되어서 Call-by-reference 형태의 함수호출 구성 가능!
+#### 23.2.2 구조체 변수를 대상으로 가능한 연산
+- 기본 자료형 변수를 대상으로는 사칙연산을 비롯해서 비교연산 등 다양한 종류의 연산이 가능한 반면,
+- 구조체 변수를 대상으로는 매우 제한된 형태의 연산만 허용된다. (ex. 대입연산, 주소 값 반환 &연산, sizeof ...)
+  ```c
+    Point pos1 = {1, 2};
+    Point pos2;
+    pos2 = pos1;    // 멤버 대 멤버간 복사가 가능
+
+    printf("%d \n", sizeof(pos1));    // pos1의 전체 크기 반환 (int, int 멤버일 경우 8 반환)
+  ```
+  + 구조체 변수간 대입연산의 결과로 멤버 대 멤버의 복사가 이뤄짐을 알 수 있다.
+- 구조체 안에는 배열도 존재할 수 있고 포인터 변수나 다른 구조체의 변수도 존재할 수 있으므로 사칙연산 하기엔 무리가 있다.
+- 구조체 변수를 대상으로 덧셈이나 뺄셈을 하려면 함수의 정의를 통해 프로그래머가 직접 정의해야 한다.
+  ```c
+    Point AddPoint (Point pos1, Point pos2) {
+      Point pos = {pos1.xpos + pos2.xpos , pos1.ypos + pos2.ypos};
+      return pos;
+    }
+  ```
+  구조체 멤버 xpos끼리, ypos끼리 덧셈이 이뤄지도록 함수 정의
+### 23.3 구조체의 유용함에 대한 논의와 중첩 구조체
+#### 23.3.1 구조체를 정의하는 이유
+- **구조체를 통해서 연관 있는 데이터를 하나로 묶을 수 있는 자료형을 정의하면, 데이터의 표현 및 관리가 용이해지고, 그만큼 합리적인 코드를 작성할 수 있게 된다.**
+#### 23.3.2 중첩된 구조체의 정의와 변수의 선언
+- 구조체의 중첩: 구조체 안에 구조체 변수가 멤버로 존재하는 경우
+  ```c
+    typedef struct point {
+      int xpos;
+      int ypos;
+    } Point;
+
+    typedef struct circle {
+      Point cen;
+      double rad;
+    } Circle;
+
+    int main(void) {
+      Circle c1 = {{1, 2}, 3.5};
+      Circle c2 = {2, 4, 3.9};      // 중괄호를 이용해서 구조체 변수의 초기화를 구분 짓지 않으면, 순서대로 초기화 된다.
+    }
+  ```
+  + 구조체 변수를 초기화하는 경우에도 배열의 초기화와 마찬가지로 초기화하지 않은 일부 멤버에 대해서는 0으로 초기화된다.
+### 23.4 공용체(Union Type)의 정의와 의미
+- 구조체는 struct라는 키워드를 사용해서 정의하는 반면, 공용체는 union이라는 키워드를 사용해서 정의한다.
+#### 23.4.1 구조체 vs 공용체
+```c
+  typedef struct sbox {
+    int mem1;
+    int mem2;
+    double mem3;
+  } SBox;
+
+  typedef union ubox {
+    int mem1;
+    int mem2;
+    double mem3;
+  } UBox;
+```
+- struct 선언을 하느냐, union 선언을 하느냐가 유일한 차이점이다.
+- 다만, 각각의 변수가 메모리 공간에 할당되는 방식과 접근의 결과에는 많은 차이가 존재한다.
+  ```c
+    printf("%d \n", sizeof(SBox));      // 16 출력
+    printf("%d \n", sizeof(UBox));      // 8 출력
+  ```
+  + 여기서 16은 모든 멤버의 크기를 합한 결과이고, 8은 멤버 중에서 가장 크기가 큰 double의 크기만 계산된 결과
+  ```c
+    printf("%p %p %p \n", &sbx.mem1, &sbx.mem2, &sbx.mem3);
+    printf("%p %p %p \n", &ubx.mem1, &ubx.mem2, &ubx.mem3);
+    /* 수행 결과
+        0x7fff5fbff760 0x7fff5fbff764 0x7fff5fbff768
+        0x7fff5fbff758 0x7fff5fbff758 0x7fff5fbff758
+        Program ended with exit code: 0
+    */
+  ```
+  + 여기서 주목할 것은 UBox형 변수를 구성하는 멤버들의 주소 값이 모두 동일하다는 것이다.
+  + 구조체 변수가 선언되면, 구조체를 구성하는 멤버는 각각 할당이 되는 반면에, 공용체 변수가 선언되면 공용체를 구성하는 멤버는 각각 할당되지 않고, 그 중 크기가 가장 큰 멤버의 변수만 하나 할당되어 이를 공유하게 된다.
+    ```c
+      UBox ubx;   // 8바이트 메모리 할당
+      ubx.mem1 = 20;    // 상위 4바이트의 메모리 공간에 20을 저장
+      printf("%d \n", ubx.mem2);  // mem2는 int형 변수이므로 이 이름으로 접근할 경우 상위 4바이트 메모리 참조  
+
+      ubx.mem3 = 7.15;  // 이 선언으로 인해 저장된 값을 7.15로 덮어써버리게 된다.
+      printf("%d \n", ubx.mem1);    // 위에서 실수를 저장하면서 덮어써버렸기 때문에,
+      printf("%d \n", ubx.mem2);    // 상위 4바이트를 읽어서 출력하면 알 수 없는 값 출력됨
+      printf("%d \n", ubx.mem3);    // 7.15
+    ```
+- 그렇다면 공용체는 어떠한 경우에 사용이 될까?
+#### 23.4.2 공용체의 유용함은 다양한 접근방식을 제공하는데 있다.
+- **하나의 메모리 공간을 둘 이상의 방식으로 접근할 수 있다.**
+  ```
+    A: 프로그램 사용자로부터 int형 정수 하나를 입력 받으래.
+       그리고 입력 받은 정수의 상위 2바이트와 하위 2바이트 값을 양의 정수로 출력!
+       그리고 상위 1바이트와 하위 1바이트에 저장된 값의 아스키 문자 출력!
+    B: 그거 공용체를 이용해 보라는거 같은데?
+  ```
+  ```c
+    #include <stdio.h>
+
+    typedef struct dbshort {
+      unsigned short upper;
+      unsigned short lower;
+    } DBShort;
+
+    typedef union rdbuf { // 모든 멤버가 다 4바이트
+      int iBuf;
+      char bBuf[4];
+      DBShort sBuf;
+    } RDBuf;
+
+    int main(void) {
+      RDBuf buf;
+      printf("정수 입력: ");
+      scanf("%d", &(buf.iBuf));
+
+      printf("상위 2바이트: %u \n", buf.sBuf.upper);
+      printf("하위 2바이트: %u \n", buf.sBuf.lower);
+      printf("상위 1바이트 아스키 코드: %c \n", buf.bBuf[0]);
+      printf("하위 1바이트 아스키 코드: %c \n", buf.bBuf[3]);
+      return 0;
+    }
+  ```
+  이렇게 공용체의 적절한 정의를 통해서 4바이트 메모리 공간을 2바이트씩, 그리고 1바이트씩 접근할 수 있다.
+### 23.5 열거형 (Enumerated Type)의 정의와 의미
+- 열거형 또한 구조체나 공용체와 마찬가지로 자료형을 정의하는 방법으로 사용된다.
+#### 23.5.1 열거형의 정의와 변수의 선언
+- 열거형으로 syllable이라는 이름의 자료형을 정의한다는 것 ==> syllable형 변수에 저장이 가능한 정수 값들을 결정하겠다!
+- 구조체와 공용체의 경우에는 멤버에 저장할 값의 **유형** 을 결정하였지만 열거형은 **저장이 가능한 값 자체를 정수의 형태로 결정**
+  + ex. syllable형 변수에는 1,2,3,4,5,6,7이 저장 가능하다!
+    ```c
+      enum syllable {   // syllable 이라는 이름의 열거형 정의
+        Do = 1, Re = 2, Mi = 3, Fa = 4, So = 5, La = 6, Ti = 7
+      };
+    ```
+    - Do를 정수 1을 의미하는 상수로 정의한다는 뜻! 이 값은 syllable형 변수에 저장이 가능하다.
+    - 즉, Do, Re, Mi, Fa, So, La, Ti 라는 이름의 상수를 각각 1,2,3,4,5,6,7로 정의 후 syllable형 변수가 저장할 수 있는 값들로 제한한 것이다.
+    - `enum syllable tone;` ==> 열거형 syllable형 변수 tone의 선언
+    ```c
+      #include <stdio.h>
+
+      typedef enum syllable {
+        Do = 1, Re = 2, Mi = 3, Fa = 4, So = 5, La = 6, Ti = 7
+      } Syllable;
+
+      void Sound(Syllable sy) {
+        switch(sy) {
+          case Do:
+            puts("도는 하얀 도라지 "); return;
+          case Re:
+            puts("레는 둥근 레코드 "); return;
+          case Mi:
+            puts("미는 파란 미나리 "); return;
+          case Fa:
+            puts("파는 예쁜 파랑새 "); return;
+          case So:
+            puts("솔은 작은 솔방울 "); return;
+          case La:
+            puts("라는 라디오고요~ "); return;
+          case Ti:
+            puts("시는 졸졸 시냇물 "); return;
+        }
+        puts("다 함께 부르세~ 도레미파 솔라시도 솔 도~ 짠~");
+      }
+
+      int main(void) {
+        Syllable tone;
+        for(tone = Do; tone <= Ti; tone+=1) {
+          Sound(tone);
+        }
+        return 0;
+      }
+    ```
+    - Do와 Ti는 각각 1과 7을 의미하는 상수이므로 반복문을 위와 같이 사용가능
+    - 또한 **열거형 상수(enumeration constants)들은 int형으로 표현되는 상수** 이기 때문에 case 레이블에서 상수 대신 1,2,3...을 삽입해도 결과는 동일하다.
+#### 23.5.2 열거형 상수의 값이 결정되는 방식
+- 열거형을 정의하는데 있어서 상수의 값을 명시하지 않으면 열거형 상수의 값은 어떻게 결정이 될까?
